fixed z-index for blockquote in safari

--- a/css/layouts.css
+++ b/css/layouts.css
@@ -47,8 +47,9 @@ article {
 }
 .endorsement_article {
   max-width: 50em;
+  position: relative;
   overflow: hidden;
-  z-index: 2;
+  z-index: 10;
 }
 .tree_animation {
   position: absolute;
@@ -56,7 +57,7 @@ article {
   top: 40%;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 0;
 }
 /*footer*/
 .footer_nav {
