--- a/css/states.css
+++ b/css/states.css
@@ -87,13 +87,17 @@ a:hover {
   /* http://tympanus.net/codrops/2011/11/02/original-hover-effects-with-css3/ */
   .endorsement_quote {
     opacity:0;
-    transform: scale(10);
-    transition: all 0.3s ease-in-out 0.2s;
+    -webkit-transform: scale(10);
+            transform: scale(10);
+    -webkit-transition: all 0.3s ease-in-out 0.2s;
+            transition: all 0.3s ease-in-out 0.2s;
   }
   .endorsement_article:hover .endorsement_quote {
     opacity:1;
-    transform: scale(1);
-    transition-delay: 0.2s;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transition-delay: 0.2s;
+            transition-delay: 0.2s;
   }
   /* http://jsfiddle.net/simurai/CGmCe/light/ */
   .tree_animation {
